# Django_pet_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule  docker-compose.yml  project_structure.txt  pyproject.toml  pytest.ini  sss.py
apps/delivery/: admin.py  apps.py  exceptions.py  middleware.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/delivery/migrations/: 0001_initial.py  0002_load_parcel_types.py
src/: manage.py
src/config/: celery.py  config.py  settings.py  urls.py
tests/: conftest.py
tests/integration/: test_api.py  test_healthcheck.py  test_middleware.py
tests/unit/: test_exceptions.py  test_models.py  test_serializers.py  test_services.py  test_tasks.py  test_utils.py
